--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -1,17 +1,435 @@
 
+body 
+    font-family: 'Open Sans', sans-serif;
+
 .container
     max-width: 1280px
     margin: 0 auto
 
+a
+    text-decoration: none
+    color: black
+
+button
+    border: none
+    &:focus
+        outline: none
+
 header
-    background: rgba(0,0,0, 0.1);
-    nav
+    .nav
         display: flex
-        .nav__content
+        &__content
             display: flex
-            .nav__item
+        &__item
+            +inner-item-center
+            width: 133px
+            height: 100px
+            color: $white
+        &__logo
+            margin: 25px 35px 0
+
+.promo
+    background: url('../img/bg/header-bg.jpg') center center/cover no-repeat
+    min-height: 800px
+    margin-top: -180px
+    padding: 332px 0 83px
+
+    color: $white
+    text-transform: uppercase
+    &__wrapper
+        display: flex
+        justify-content: space-between
+    &__work-time
+        width: 10%
+        writing-mode: tb-rl
+        transform: rotate(180deg)
+        display: flex
+        justify-content: flex-end
+    &__main
+        width: 80%
+        .title
+            margin-top: 20px
+            font-size: 82px
+            line-height: 82px
+            &::after
+                margin-top: 37px
+    &__subheader
+        text-align: center
+        font-size: 14px
+        letter-spacing: 7px
+    &__btns
+        margin: 0 auto
+        width: 440px
+        display: flex
+        button
+            +btn-yeallow
+            margin: 31px 20px 0
+        .btn__explore
+            background: rgba(0,0,0, 0 )
+            border: 1px solid rgba(255, 255, 255, 0.5)
+            transition: 0.2s all
+            &:hover
+                background: rgba(255, 255, 255, 0.9)
+                color: $black
+    &__social
+        width: 10%
+        display: flex
+        flex-direction: column
+        align-items: flex-end
+    &__round
+        margin-bottom: 20px
+        width: 60px
+        height: 60px
+        border: 1px solid rgba(255, 255, 255, 0.2)
+        border-radius: 100%
+        color: $white
+        +inner-item-center
+        transition: 0.2s all
+        i
+            font-size: 20px
+        &:hover
+            background: rgba(255, 255, 255, 0.9)
+            color: $black
+    .arrow__down
+        margin: 82px auto 0
+        width: 60px
+        height: 60px
+        background: rgba(0,0,0, 0 )
+        border: 1px solid rgba(255, 255, 255, 0.2)
+        border-radius: 100%
+        +inner-item-center
+        &-inner
+            width: 40px
+            height: 40px
+            border-radius: 100%
+            background: $white
+            +inner-item-center
+            color: $black
+            transition: 0.2s all
+            i
+                font-size: 16px
+            &:hover
+                background: $black
+                color: $white
+                
+.title
+    font-size: 36px
+    font-weight: bold
+    text-transform: uppercase
+    text-align: center
+    &::after
+        content: ""
+        display: block
+        width: 60px
+        height: 5px
+        background: $main-color
+        border-radius: 50px;
+        margin: 22px auto 0
+
+.subtitle
+    margin-top: 20px
+    font-size: 18px
+    font-weight: bold
+    text-align: center
+
+.text
+    margin-top: 27px
+    font-size: 14px
+    text-align: center
+
+.photo-right
+    position: relative
+    margin-right: 145px
+    &__img
+        width: 475px
+        height: 475px
+        filter: drop-shadow(0px 0px 50px rgba(0, 0, 0, 0.5))
+        border-radius: 5px
+    &::after
+        content: ""
+        display: block
+        position: absolute
+        top: 50%
+        transform: translateY(-50%) translateX(50%)
+        right: 0
+        background: rgba(0,0,0, 0 )
+        width: 250px
+        height: 250px
+        border: 20px solid $main-color
+        filter: drop-shadow(0px 0px 100px rgba(0, 0, 0, 0.5))
+        border-radius: 5px
+
+.photo-left
+    position: relative
+    margin-left: 145px
+    &__img
+        width: 475px
+        height: 475px
+        filter: drop-shadow(0px 0px 50px rgba(0, 0, 0, 0.5))
+        border-radius: 5px
+    &::after
+        content: ""
+        display: block
+        position: absolute
+        top: 50%
+        left: 0
+        transform: translateY(-50%)  translateX(-50%)
+        background: rgba(0,0,0, 0 )
+        width: 250px
+        height: 250px
+        border: 20px solid $main-color
+        filter: drop-shadow(0px 0px 100px rgba(0, 0, 0, 0.5))
+        border-radius: 5px
+
+.main-title
+    height: 100px
+    font-size: 12px
+    font-weight: bold
+    letter-spacing: 0.5em
+    text-transform: uppercase
+    +inner-item-center
+
+.main-subtext
+    font-size: 12px
+    height: 100px
+    color: rgba(51, 51, 51, 0.5)
+    +inner-item-center
+
+.about-us
+    min-height: 675px
+    padding: 100px 0
+    background: $white
+    &__wrapper
+        display: flex
+    .descr
+        padding: 117px 80px 0 0
+
+.team
+    min-height: 675px
+    background: url('../img/bg/team-bg.jpg') center center/cover no-repeat
+    padding-bottom: 100px
+    color: $white
+    &__wrapper
+        display: flex
+    .descr
+        padding: 117px 0 0 72px
+
+.book-table
+    min-height: 675px
+    background: $white
+    padding-top: 100px
+    &__wrapper
+        display: flex
+    .book__inner
+        padding: 62px 72px 62px 0
+    .book__form
+        margin-top: 15px
+        &-wrapper
+            display: flex
+            flex-wrap: wrap
+            justify-content: center
+        &-input
+            display: block
+            width: 277px
+            height: 60px
+            background: #E5E5E5
+            border-radius: 5px
+            color: rgba(51, 51, 51, 0.5)
+            font-size: 14px
+
+            border: none
+            padding-left: 20px
+            margin: 5px
+        &-submit
+            display: block
+            margin: 0 auto
+            +btn-yeallow
+            width: 564px
+            height: 60px
+
+.specialties
+    min-height: 675px
+    background: url('../img/bg/specialties-bg.jpg') center center/cover no-repeat
+    color: $white
+    &__wrapper
+        display: flex
+    .descr
+        padding: 117px 0 117px 80px
+
+.slider__btns
+    height: 100px
+    +inner-item-center
+    .slider__btn
+        display: block
+        margin: 0 10px
+        width: 10px
+        height: 10px
+        background: rgba(255, 255, 255, 0.5)
+        border-radius: 100%
+        border: none
+    .slider__btn-active
+        background: $white
+
+.menu
+    min-height: 920px
+    padding: 100px 
+    &__nav
+        margin-top: 50px
+        +inner-item-center
+        &-item
+            +inner-item-center
+            list-style-type: none
+            width: 120px
+            height: 50px
+            background: $white
+            border-right: 1px solid rgba(51, 51, 51, 0.2)
+            font-size: 12px
+            font-weight: bold
+            cursor: pointer
+            transition: 0.2s all
+            &:hover
+                background: rgba(0, 0, 0, 0.1)
+            &:last-child
+                border: none
+    &__block
+        position: relative
+        margin-top: 50px
+        &-wrapper
+            margin: 0 auto
+            display: flex
+            justify-content: flex-start
+            flex-wrap: wrap
+            width: 95%
+        &-item
+            margin: 0 20px
+            display: flex
+            +inner-item-center
+            width: 363px
+            height: 66px
+            .item-text
+                .item-title
+                    font-size: 18px
+                    font-weight: bold
+                    color: $black
+                    text-transform: uppercase
+                .item-descr
+                    font-size: 12px
+                    color: rgba(51, 51, 51, 0.5)
+            .item-price
+                margin-left: 8px
+                font-size: 18px
+                font-weight: bold
+
+.private
+    height: 675px
+    background: url('../img/bg/private-bg.jpg') center center/cover no-repeat
+    color: $white
+    &__wrapper
+        display: flex
+        justify-content: center
+        .photo-left
+            margin-right: 80px
+            &::before
+                content: "weddings"
+                background: $black
+                position: absolute
+                padding-top: 20px
+                width: 80px
+                height: 455px
+                top: 0
+                right: 0
+
+                writing-mode: tb-rl
+                transform: rotate(0deg)
                 display: flex
-                max-width: 133px
-                height: 100px
-                justify-content: center
+                justify-content: flex-start
                 align-items: center
+
+                font-size: 24px
+                text-transform: uppercase
+        .photo-right
+            &::before
+                content: "corporate pzrties"
+                background: $black
+                position: absolute
+                padding-top: 20px
+                width: 80px
+                height: 455px
+                top: 0
+                left: 0
+
+                writing-mode: tb-rl
+                transform: rotate(180deg)
+                display: flex
+                justify-content: flex-start
+                align-items: center
+
+                font-size: 24px
+                text-transform: uppercase
+    .main-subtext
+        color: rgba(255, 255, 255, 0.5)
+
+.galerie
+    height: 360px
+    &__wrapper
+        display: flex
+        justify-content: center
+    &__img
+        width: 360px
+        height: 360px
+
+.contact
+    min-height: 650px
+    padding: 100px 0
+    position: relative
+    &__form
+        margin-top: 50px
+        display: flex
+        flex-wrap: wrap
+        &-input
+            display: block
+            width: 416px
+            height: 60px
+            background: #E5E5E5
+            border-radius: 5px
+            color: rgba(51, 51, 51, 0.5)
+            font-size: 14px
+
+            border: none
+            padding-left: 20px
+            margin: 5px
+            &:nth-child(4)
+                width: 100%
+                height: 120px
+        &-submit
+            +btn-yeallow
+            width: 640px
+            height: 60px
+    &__links
+        display: flex
+        align-items: center
+        width: 640px
+        height: 60px
+        &-item
+            display: block
+            margin-left: 20px
+            font-size: 12px
+            font-weight: bold
+            color: rgba(51, 51, 51, 0.5)
+        i
+            margin-right: 5px
+            color: $main-color
+            font-size: 12px
+
+.map
+    height: 475px
+
+.footer
+    height: 100px
+    background: $black
+    +inner-item-center
+    &__text
+        font-size: 12px
+        color: rgba(255, 255, 255, 0.5)
+        span
+            font-weight: bold
